[gd_scene load_steps=4 format=2]

[ext_resource path="res://Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://messages.tres" type="DynamicFont" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 83.7158

[node name="Checkpoint" type="Area2D"]
script = ExtResource( 1 )

[node name="Emit" type="Polygon2D" parent="."]
color = Color( 1, 0.752941, 1, 0.321569 )
polygon = PoolVector2Array( -9.94478, 0, -9.94478, -10, 0.055222, -30, 10.0552, -10, 10.0552, 10, 0.055222, 30, -9.94478, 10 )

[node name="YSort" type="YSort" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="YSort"]
color = Color( 0.776471, 0.564706, 0.854902, 1 )
polygon = PoolVector2Array( -10, 10, -10, -10, 0, -30, 10, -10, 10, 10, 0, 30 )

[node name="Details" type="Polygon2D" parent="YSort"]
color = Color( 0.521569, 0.231373, 0.560784, 1 )
polygon = PoolVector2Array( 0, -30, 10, -10, 0, 0 )

[node name="Details2" type="Polygon2D" parent="YSort"]
color = Color( 0.501961, 0.0862745, 0.556863, 1 )
polygon = PoolVector2Array( 0, 0, 10, -10, 10, 10, 0, 30 )

[node name="Details3" type="Polygon2D" parent="YSort"]
color = Color( 0.6, 0.380392, 0.627451, 1 )
polygon = PoolVector2Array( -10, -10, 0, 0, 0, 30, -10, 10 )

[node name="Details4" type="Polygon2D" parent="YSort"]
color = Color( 0.6, 0.380392, 0.627451, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="textBubble" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 2.47278, -7.18018, 8.95882, -21.3877, 5.87022, -32.1978, 11.4297, -42.3901, 49.8517, -43.8537, 84.3139, -41.5779, 96.3432, -32.1496, 86.2646, -21.4208, 51.4773, -19.145, 18.9658, -21.4208 )

[node name="Label" type="Label" parent="textBubble"]
margin_left = 12.0
margin_top = -40.0
margin_right = 87.0
margin_bottom = -21.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press W"
[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Checkpoint_body_exited"]
[connection signal="checkpoint_activating" from="." to="." method="_on_Checkpoint_checkpoint_activating"]
